Closed Bug 1535005 Opened 7 years ago Closed 6 years ago

[webvtt] html5 video captions doesn't disappear after seeking back to a position with an other caption

Categories

(Core :: Audio/Video: Playback, defect, P2)

67 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox68 --- verified

People

(Reporter: zeusex81, Assigned: alwu)

References

Details

Attachments

(4 files)

Attached image bug.jpg

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:67.0) Gecko/20100101 Firefox/67.0

Steps to reproduce:

  1. play video http://iandevlin.github.io/mdn/video-player-with-captions/
  2. seek to a position ahead from the [Test] of the start until you reach another subtitle
  3. seek back to the start while the other subtitle is being displayed

Actual results:

Captions stack instead of replacing.

Expected results:

The bug is not present in Firefox stable 65.

Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core
Assignee: nobody → alwu
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P2
Blocks: old-webvtt
Summary: html5 video captions doesn't disappear after seeking back to a position with an other caption → [webvtt] html5 video captions doesn't disappear after seeking back to a position with an other caption

The issue in comment0 has no longer occur, but now I have found a similar issue on this site [1]. The caption didn't disappear after seeking.

[1] https://alastor0325.github.io/htmltests/webvtt/webvtt_scaled_video.html

mLastTimeMarchesOnCalled is used to record last time we run TimeMarchOn(), so there is no need to upate it on DidSeek().

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2885da69f0f3 part1 : no need to update 'mLastTimeMarchesOnCalled' in 'DidSeek()' r=jya https://hg.mozilla.org/integration/autoland/rev/f188012d248d part2 : add test. r=jya
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Regressions: 1548446

Hi,

Reproduced the issue using Firefox 67.0a1 (20190313215409) on Windows 10.
The issue is verified using Firefox 68.0b13 (20190624133534) and Firefox 69.0a1 (20190626215508) on Windows 10 and Mac OS 10.14.

In latest nightly 69.0a1 (20190626215508) is another problem now, subtitle is displayed twice(see attachment below).
The issue occurs just with english subtitle.
Nightly 69.0a1 Build ID: 20190525093913 is first known bad build.
Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5d3e1ea7769357bce7297b83be3863034bcf656e&tochange=edbf8267dd4f5a786ae660ff9e2fe890cf74c48e

@Alastor Wu, should I log a new bug for this or do you know something related to this issue?

Thanks.

Status: RESOLVED → VERIFIED
Flags: qe-verify+ → needinfo?(alwu)

Thank you for this finding, I've filed bug1562021 for it.

Flags: needinfo?(alwu)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: