Bug 1535005 - part1 : no need to update 'mLastTimeMarchesOnCalled' in 'DidSeek()' r=jya

According to spec [1],  `mLastTimeMarchesOnCalled` is used to represent the `last time` in step3. It's used to record last time we run `TimeMarchOn()`, so there is no need to upate it on `DidSeek()`.

[1] https://html.spec.whatwg.org/multipage/media.html#time-marches-on

Differential Revision: https://phabricator.services.mozilla.com/D29094